<resources>
    <string name="app_name">LunchLink</string>
    <string name="about">About</string>
    <string name="notifications">Notifications</string>
    <string name="accountsettings">AccountSettings</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="diet">Diet</string>
    <string name="snack">Snack</string>
    <string name="date">date</string>
    <string name="duty">duty</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Кри</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="button">Button</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_second_name">Enter your second name</string>
    <string name="cancel">Cancel</string>
    <string name="are_u_sure_to_delete">Are you sure to delete this item</string>
    <string name="custom">Custom</string>
    <string name="custom_meal">Custom meal</string>
    <string name="delete">Delete</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="change_user_name">Change user name</string>
    <string name="change_server_ip">Change server ip</string>
    <string name="connection_established">Connection established</string>
    <string name="failed_to_connect">Failed to connect to the server</string>
    <string name="ip_changed">IP has been changed</string>
    <string name="name_changed">Name has been changed</string>
    <string name="menu">Menu</string>
    <string name="credits">Made by Obektev ©</string>
    <string name="administrator_settings">Administrator key</string>
    <string name="now_you_are_an_admin">You became Administrator</string>
    <string name="invalid_password">Invalid password</string>
    <string name="enter_text">Enter Text</string>
    <string name="you_already_admin">You are already Administrator</string>
    <string name="darkmode">darkmode</string>
    <string name="testordername" translatable="false">TestOrderName</string>
    <string name="user_card" translatable="false">user_card</string>
    <string name="reload_page">Reload page</string>
    <string name="current_name">Your name now is</string>
    <string name="welcome">Welcome</string>
    <string name="user">User</string>
    <string name="main_activity_about_text">Welcome to LunchLink.
        \nThere you can order some meals at your school.
        \nYou can change your avatar and username in the settings!
        \nIf you find any errors or bugs, tell me! <i>obektev@gmaill.com</i>
        \nMade by Alexander (Obektev) Ivanov.
        \nGymnasium №5, Vitebsk city
        \n2023</string>
    <string name="todo">TODO</string>
    <string name="registration_welcome">Welcome to LunchLink. \nIt seems, you didn\'t open this application yet.
    So, you need to enter your mobile phone, to link this account to your smartphone.\n This is the way to save your account from hacking and you will
    never lose it.</string>
    <string name="continue_">Continue</string>
    <string name="registration_form">Security code has been sent to your phone number.
        <b>Don\'t tell anybody this code!</b></string>
    <string name="login_anonymously">Login anonymously</string>
    <string name="login_google">Login with Google</string>
    <string name="login_email">Login with email</string>
    <string name="enter_your_mobile_phone_here">Enter your mobile phone here</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="send">Send code</string>
    <string name="enter_code_here">Enter code here</string>
    <string name="verify">Verify</string>
    <string name="code_sent">The code has been sent</string>
    <string name="wrong_code">Wrong code! Try again</string>
    <string name="success">Success!</string>
    <string name="registration_final_text">Cool! We are almost there! One more step - introduce yourself to make everybody know who are you!</string>
    <string name="enter_your_name_and_surname">Enter your name and surname</string>
    <string name="logout_from_profile">Logout from profile</string>
    <string name="signed_out">Signed out. Restarting application</string>
    <string name="change_avatar_image">Change Avatar Image</string>
    <string name="avatar_changed">Avatar changed successfully</string>
    <string name="about_and_credits">About and credits</string>
    <string name="choose_school_message">Now you can choose your city and school! Don\'t forget about class!\n
    <i>There is no your school? Tell me (obektev@gmail.com) about it and I will add it!</i></string>
    <string name="choose_city">Choose your city</string>
    <string name="choose_school">Chose your school</string>
    <string name="choose_class">Choose your class</string>
    <string name="vitebsk" translatable="false">Vitebsk</string>
    <string name="minsk" translatable="false">Minsk</string>
    <string name="brest" translatable="false">Brest</string>
    <string name="gomel" translatable="false">Gomel</string>
    <string name="grodno" translatable="false">Grodno</string>
    <string name="mogilev" translatable="false">Mogilev</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="got_schools">Got schools info</string>
    <string name="got_classes">Got classes info</string>
    <string name="name_not_set">Your name isn\'t set! Choose the name!</string>
    <string name="city_not_set">City is not set</string>
    <string name="school_not_set">School is not set</string>
    <string name="class_not_set">Class is not set</string>
    <string name="failed_connected_to_server">Failed to connect. Check your Internet connection</string>
    <string name="there_can_make_order">There you can make order for</string>
    <string name="cool">Cool</string>
    <string name="order_created">Order created!</string>
    <string name="unable_to_get_date">Unable to get date. Check Internet connection</string>
    <string name="show_your_internet_connection">Shows your Internet connection</string>
    <string name="date_got">Date has been gotten. You can try again!</string>
    <string name="no_orders_yet">No orders yet</string>
    <string name="name_cannot_be_null">Your name can not be empty</string>
    <string name="checkup_your_info">Check your profile info</string>
    <string name="username">Username</string>
    <string name="city">City</string>
    <string name="school">School</string>
    <string name="class_">Class</string> <!-- `class` word reserved by Java -->
    <string name="userinfo">User information</string>
    <string name="phone_number">Phone number</string>
    <string name="user_id">User ID</string>
    <string name="you_already_ordered">You have already ordered this meal!</string>
    <string name="if_you_want_to_order_to_another_person">If you want to order this meal to another person, press <b>\n"I Want\"</b> else press \"Cancel\"</string>
    <string name="i_want">I Want</string>
    <string name="enter_person_name">Enter person name</string>
    <string name="ordered_by">ordered by</string>
    <string name="order_canceled">Order canceled</string>
    <string name="connection_to_ethernet">Connection to Ethernet</string>
    <string name="uploaded">Uploaded</string>
    <string name="no_menu_yet">No menu yet</string>
    <string name="upload_menu_image">Upload menu image</string>
    <string name="delete_menu_image">Delete menu image</string>
    <string name="menu_image_deleted">Menu image deleted</string>
    <string name="to_">to</string>
    <string name="enter_order">Enter your order</string>
    <string name="order">Order</string>
    <string name="order_empty">Order can not be empty</string>
    <string name="schoolinfo">School Information</string>
</resources>