<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/connectionImage"
        android:icon="@drawable/baseline_signal_wifi_connected_no_internet_4_24"
        android:title="@string/connection_to_ethernet"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item android:id="@+id/the_button"
        android:icon="@drawable/baseline_dark_mode_24"
        android:title="@string/darkmode"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/notifications_button"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/notifications"
        app:showAsAction="ifRoom" />

</menu>