<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/reg_background" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/todo"
        android:elevation="3dp"
        android:src="@drawable/lunch_link_logo"
        android:translationZ="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"  />
    <TextView
        android:id="@+id/registration_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_shape"
        android:backgroundTint="#9E000000"
        android:fontFamily="@font/aldrich"
        android:padding="10dp"
        android:text="@string/registration_final_text"
        android:textAlignment="center"
        android:textColor="#EFEEEE"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:lineSpacingExtra="3dp"
        android:alpha="1"/>
    <EditText
        android:id="@+id/name_input"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_shape"
        android:backgroundTint="#9E000000"
        android:fontFamily="@font/aldrich"
        android:hint="@string/enter_your_name_and_surname"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:singleLine="false"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#C8C8C8"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_text" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_shape"
        android:backgroundTint="#C10F162E"
        android:fontFamily="@font/aldrich"
        android:text="@string/_continue"
        android:textColor="#C1FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />
</androidx.constraintlayout.widget.ConstraintLayout>