<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_shape"
        android:elevation="3dp"
        android:translationZ="3dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/aldrich"
            android:text="@string/settings"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/round_shape"
        android:clipToPadding="true"
        android:elevation="3dp"
        android:padding="10dp"
        android:translationZ="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_out_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/round_shape"
            android:backgroundTint="#F6F6F6"
            android:elevation="5dp"
            android:translationZ="5dp"
            android:fontFamily="@font/aldrich"
            android:textColor="@color/semi_text"
            android:textSize="20sp"
            android:text="@string/sign_out_from_profile"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/change_avatar_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_out_button"
            android:background="@drawable/round_shape"
            android:backgroundTint="#F6F6F6"
            android:elevation="5dp"
            android:translationZ="5dp"
            android:fontFamily="@font/aldrich"
            android:textColor="@color/semi_text"
            android:textSize="20sp"
            android:text="@string/change_avatar_image"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/change_username_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_avatar_button"
            android:background="@drawable/round_shape"
            android:backgroundTint="#F6F6F6"
            android:elevation="5dp"
            android:translationZ="5dp"
            android:fontFamily="@font/aldrich"
            android:textColor="@color/semi_text"
            android:textSize="20sp"
            android:text="@string/change_user_name"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>